<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minimalist Search</string>
    <string name="firstCredit">Magnifying glass icon courtesy of Deelight</string>
    <string name="firstCreditURL">http://openclipart.org/detail/2202/magnifying-glass-by-deelight</string>
    <string name="secondCredit">Code by Steven Levis</string>
    <string name="secondCreditURL">http://levis501.github.com/MinimalistSearch</string>
    <string name="search">Search</string>
    <string name="paste">Paste</string>
    <string name="pasteAndSearch">Paste and Search</string>
    <string name="luckySearch">Lucky Search</string>
    <string name="pasteAndLuckySearch">Paste and Lucky Search</string>
    
</resources>